# analysis_program

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analysis_program-config.cmake.in  analysis_program.pc.in  bitbucket-pipelines.yml  create_project.sh
.github/workflows/: cmake.yml
example_build_script/: do_cmake.sh  do_cmake_juwels-booster.sh  do_cmake_m100.sh  do_cmake_marconi.sh  do_cmake_qbig.sh  load_modules_juwels-booster.sh  load_modules_m100.sh  load_modules_marconi.sh
include/: CMakeLists.txt  HLT.hpp  KandD.hpp  QC3_interface.hpp  bessel.hpp  continuum_reph.hpp  correlators_analysis.hpp  eigensystem.hpp  fit_all.hpp  fve.hpp  gamma_analysis.hpp  global.hpp  global_barion_QED.hpp  global_fit_KandD.hpp  global_reph.hpp  gnuplot.hpp  header_phi4.hpp  indices.hpp  integral_eq_QC3.hpp  linear_fit.hpp  m_eff.hpp  m_eff1.hpp  minimizer.hpp  mutils.hpp  myarb.hpp  non_linear_fit.hpp  pion.hpp  read.hpp  read_nissa.hpp  resampling.hpp  resampling_new.hpp  sorting.hpp  tower.hpp  various_fits.hpp  virtualphoton_routines.hpp  zeta_interpolation.hpp
modules/: Gamma.cpp  HLT.cpp  QC3_interface.cpp  bootstrap.cpp  correlators_analysis.cpp  eigensystem.cpp  fit_all.cpp  gnuplot.cpp  header_phi4.cpp  indices.cpp  linear_fit.cpp  m_eff.cpp  m_eff1.cpp  minimizer.cpp  mutils.cpp  non_linear_fit.cpp  non_linear_fit_sigmax.cpp  rand.cpp  read.cpp  read_nissa.cpp  resampling.cpp  resampling_new.cpp  sorting.cpp  tower.cpp  various_fits.cpp
modules/FVE/: fve.cpp  fve_K.cpp  fve_Mpi.cpp
modules/KandD/: .directory  K_chiral_fit.cpp  KandD.cpp  KandD_clover.cpp  KandD_from_M.cpp  Omega_jacob.cpp  fKoverfpi_clover.cpp  global_fit_KandD.cpp
modules/Zeta/: zeta_interpolation.cpp
modules/bessel/: dbesk0.cpp  dbesk1.cpp
modules/pion/: Pion_clover.cpp  Pion_clover_treshold.cpp  pion.cpp  pion_FVE.cpp
modules/reph/: FAV_interpolation_msc.cpp  FAV_treshold.cpp  FAandV.cpp  automatic_plateau_R.cpp  plot_reph.cpp
modules/three_particle_QC/: integral_eq_QC3.cpp
modules/virtualphoton/: routines_H.cpp
modules/zeta/: CMakeLists.txt  dzeta_function.c  dzeta_function.h
projects/BSM/: CMakeLists.txt  fit_all_BSM.cpp  fit_all_old_BSM.cpp  fit_data.hpp  header_BSM.hpp  lhs_functions.hpp  wigner.cpp
projects/clover/: CMakeLists.txt  binning.cpp  convert.cpp  convert.sh  fit_all_beta.cpp  fit_all_clover.cpp  form_factors.cpp  form_factors_out_max_twist.cpp  petros_correlators.cpp  prace2gm2.cpp  script_prace.sh
projects/g-2/: CMakeLists.txt  do_analysis_charm.hpp  do_runs.sh  fit_all_g-2.cpp  functions.hpp  functions_amu.cpp  functions_amu.hpp  functions_amu.html  g-2.cpp
projects/nissa_mpcac/: CMakeLists.txt  mpcac_renorm_D.cpp  nissa_mpcac.cpp
projects/phi4/: CMakeLists.txt  analysis_SDE.cpp  checks_phi4.cpp  common_integral_eq.cpp  common_integral_eq.hpp  extra_func_phi4.cpp  extra_func_phi4.hpp  fit_all_complex_g0.cpp  fit_all_complex_g10.cpp  fit_all_complex_g20.cpp  fit_all_complex_g5.cpp  fit_all_complex_g5_largeL.cpp  fit_all_complex_g5_old.cpp  fit_all_g.cpp  fit_all_g0.1.cpp  fit_all_g0.25.cpp  fit_all_g0.25_t1.cpp  fit_all_g1.5.cpp  fit_all_ising_g0.005.cpp  fit_all_phi4.cpp  fit_all_quantization_condition.cpp  fit_function.hpp  header_phi4.hpp  integral_eq.cpp  integral_eq_g10.cpp  integral_eq_g10_2par.cpp  integral_eq_g20.cpp  integral_eq_g20_2par.cpp  integral_eq_g5_2par_largeL.cpp  integral_eq_g5_largeL.cpp  integral_eq_scratchpad.cpp  lhs_functions.hpp  mass_phi4.hpp  phi4.cpp  phi4_new.cpp  phi4_new.html  test.cpp
projects/project_template/: CMakeLists.txt  functions_project_template.cpp  functions_project_template.hpp  project_template.cpp
projects/python_wrapper/: CMakeLists.txt  hello_python.cpp
projects/realphoton/: CMakeLists.txt  binning_reph.cpp  fit_all_reph.cpp  reph.cpp
projects/renormalization_D/: CMakeLists.txt  functions_renormalization_D.cpp  functions_renormalization_D.hpp  renormalization_D.cpp
projects/virtualphoton/: CMakeLists.txt  header_file_virph.hpp  virph.cpp
tests/: CMakeLists.txt  benchmark.cpp  fit_as_minimiser.cpp  test_GEVP.cpp  test_HLT.cpp  test_covariance_generator.cpp  test_fake_resempling.cpp  test_linear_fit.cpp  test_non_linear_fit.cpp  test_non_linear_fit_sigmax.cpp  test_non_linear_fit_sigmax_gnuplot.data  test_non_linear_fit_sigmax_gnuplot.gp
tests/phi4/: G2t_T32_L20_msq0-4.925000_msq1-4.850000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_bin100_merged_bin1000  G2t_T48_L20_msq0-4.925000_msq1-4.850000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_bin40_merged_bin1000  plateaux.txt  script_check.sh
tests/phi4/jackknife/: boot_G2t_T32_L20_msq0-4.925000_msq1-4.850000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_reference  jack_G2t_T32_L20_msq0-4.925000_msq1-4.850000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_reference  jack_G2t_T48_L20_msq0-4.925000_msq1-4.850000_l02.500000_l12.500000_mu5.000000_g0.000000_rep0_reference
tools/: CMakeLists.txt  compute_error_jack_file.cpp  nissa2bin.cpp  quick_gamma.cpp  quick_mass.cpp
