



add_target_with_lib(quick_mass quick_mass.cpp)
add_target_with_lib(quick_gamma quick_gamma.cpp)
# add_executable(quick_gamma quick_gamma.cpp)
# target_link_libraries(quick_gamma PUBLIC analysis_program)
# # MESSAGE("CMAKE_SOURCE_DIR/includ   ${CMAKE_SOURCE_DIR}/include")
# target_include_directories(quick_gamma PUBLIC ${CMAKE_SOURCE_DIR}/include)


